@@ -7,8 +7,7 @@ namespace DotNetFramework
 {
     public sealed class Toolset : Opus.Core.IToolset
     {
-        private System.Collections.Generic.Dictionary<System.Type, Opus.Core.ITool> toolMap = new System.Collections.Generic.Dictionary<System.Type, Opus.Core.ITool>();
-        private System.Collections.Generic.Dictionary<System.Type, System.Type> toolOptionsMap = new System.Collections.Generic.Dictionary<System.Type, System.Type>();
+        private System.Collections.Generic.Dictionary<System.Type, Opus.Core.ToolAndOptionType> toolConfig = new System.Collections.Generic.Dictionary<System.Type, Opus.Core.ToolAndOptionType>();
 
         public Toolset()
         {
@@ -22,8 +21,7 @@ namespace DotNetFramework
                 Opus.Core.State.Add<System.Type>("VSSolutionBuilder", "SolutionType", typeof(Solution));
             }
 
-            this.toolMap[typeof(CSharp.ICSharpCompilerTool)] = new Csc(this);
-            this.toolOptionsMap[typeof(CSharp.ICSharpCompilerTool)] = typeof(CSharp.OptionCollection);
+            this.toolConfig[typeof(CSharp.ICSharpCompilerTool)] = new Opus.Core.ToolAndOptionType(new Csc(this), typeof(CSharp.OptionCollection));
         }
 
         #region IToolset Members
@@ -60,30 +58,29 @@ namespace DotNetFramework
             }
         }
 
+        bool Opus.Core.IToolset.HasTool(System.Type toolType)
+        {
+            return this.toolConfig.ContainsKey(toolType);
+        }
+
         Opus.Core.ITool Opus.Core.IToolset.Tool(System.Type toolType)
         {
-            if (!this.toolMap.ContainsKey(toolType))
+            if (!(this as Opus.Core.IToolset).HasTool(toolType))
             {
                 throw new Opus.Core.Exception("Tool '{0}' was not registered with toolset '{1}'", toolType.ToString(), this.ToString());
             }
 
-            return this.toolMap[toolType];
+            return this.toolConfig[toolType].Tool;
         }
 
         System.Type Opus.Core.IToolset.ToolOptionType(System.Type toolType)
         {
-            if (!this.toolOptionsMap.ContainsKey(toolType))
+            if (!(this as Opus.Core.IToolset).HasTool(toolType))
             {
-                // if there is no tool then there will be no optionset
-                if (!this.toolMap.ContainsKey(toolType))
-                {
-                    return null;
-                }
-
                 throw new Opus.Core.Exception("Tool '{0}' has no option type registered with toolset '{1}'", toolType.ToString(), this.ToString());
             }
 
-            return this.toolOptionsMap[toolType];
+            return this.toolConfig[toolType].OptionsType;
         }
 
         string Opus.Core.IToolset.Version(Opus.Core.BaseTarget baseTarget)
