@@ -2,13 +2,11 @@ namespace CodeGenTest2
 {
     public class Toolset : Opus.Core.IToolset
     {
-        private System.Collections.Generic.Dictionary<System.Type, Opus.Core.ITool> toolMap = new System.Collections.Generic.Dictionary<System.Type, Opus.Core.ITool>();
-        private System.Collections.Generic.Dictionary<System.Type, System.Type> toolOptionsMap = new System.Collections.Generic.Dictionary<System.Type, System.Type>();
+        private System.Collections.Generic.Dictionary<System.Type, Opus.Core.ToolAndOptionType> toolConfig = new System.Collections.Generic.Dictionary<System.Type, Opus.Core.ToolAndOptionType>();
 
         public Toolset()
         {
-            this.toolMap[typeof(ICodeGenTool)] = new CodeGenTool(this);
-            this.toolOptionsMap[typeof(ICodeGenTool)] = typeof(CodeGenOptionCollection);
+            this.toolConfig[typeof(ICodeGenTool)] = new Opus.Core.ToolAndOptionType(new CodeGenTool(this), typeof(CodeGenOptionCollection));
         }
 
         #region IToolset Members
@@ -33,30 +31,29 @@ namespace CodeGenTest2
             return "dev";
         }
 
+        bool Opus.Core.IToolset.HasTool(System.Type toolType)
+        {
+            return this.toolConfig.ContainsKey(toolType);
+        }
+
         Opus.Core.ITool Opus.Core.IToolset.Tool(System.Type toolType)
         {
-            if (!this.toolMap.ContainsKey(toolType))
+            if (!(this as Opus.Core.IToolset).HasTool(toolType))
             {
                 throw new Opus.Core.Exception("Tool '{0}' was not registered with toolset '{1}'", toolType.ToString(), this.ToString());
             }
 
-            return this.toolMap[toolType];
+            return this.toolConfig[toolType].Tool;
         }
 
         System.Type Opus.Core.IToolset.ToolOptionType(System.Type toolType)
         {
-            if (!this.toolOptionsMap.ContainsKey(toolType))
+            if (!(this as Opus.Core.IToolset).HasTool(toolType))
             {
-                // if there is no tool then there will be no optionset
-                if (!this.toolMap.ContainsKey(toolType))
-                {
-                    return null;
-                }
-
                 throw new Opus.Core.Exception("Tool '{0}' has no option type registered with toolset '{1}'", toolType.ToString(), this.ToString());
             }
 
-            return this.toolOptionsMap[toolType];
+            return this.toolConfig[toolType].OptionsType;
         }
 
         #endregion
