@@ -1,3 +1,5 @@
+15-May-2013 Opus.Core.IToolset now has a HasTool method to query if a tool has been registered, since calling Tool will throw an exception if not.
+
 15-May-2013 Corrected the logic in NativeBuilder.DirectoryUpToDate
 
 13-May-2013 OpusOptionCodeGenerator no longer throws an exception when an interface with no properties is used.
